# suzuwave-analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
src/: app.rs  lib.rs  main.rs
src/clients/: mod.rs
src/clients/files/: mod.rs  vibric.rs
src/clients/traits/: file_read_only.rs  mod.rs
src/components/: about.rs  chart_explorer.rs  chart_view.rs  command_console.rs  command_table.rs  component.rs  graphic_view.rs  graphic_widget.rs  mod.rs
src/models/: mod.rs
src/models/chart_view/: canvas_style.rs  chart.rs  mod.rs
src/models/chart_view/chart/: chart_metadata.rs  chart_model.rs  chart_transform.rs  mod.rs  point.rs
src/models/cli/: args.rs
src/models/command_console/: style.rs
src/models/files/: file_types.rs  mod.rs  signal_file.rs  signal_header.rs
src/models/files/vibric/: mod.rs  parsed_file_data.rs
src/models/graphic_view/: canvas_style.rs  mod.rs  plot.rs  point.rs
src/services/: chart_processor.rs  graphic_process.rs  mod.rs
src/shared/: mod.rs
src/shared/commands/: chart_explorer.rs  chart_view.rs  general.rs  graphic_view.rs  mod.rs
src/shared/constants/: about.rs  chart.rs  chart_explorer.rs  chart_view.rs  command.rs  command_table.rs  general.rs  graphic_view.rs  mod.rs  vibric.rs
src/shared/errors/: chart_processing.rs  chart_view.rs  commands.rs  graphic_view.rs  mod.rs
src/states/: about.rs  app.rs  chart_view.rs  command_console.rs  command_table.rs  graphic_view.rs  graphic_widget.rs  mod.rs
src/utils/: cli_helper.rs
src/utils/files/: errors.rs
