[package]
name = "suzuwave"
version = "0.1.0"
description = "An opensource lightweight analysis tool for various types of signal files"
authors = ["Arciemij Bokun <scientificrelsa@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
thiserror = "2"
anyhow = "1"
strum = "0.27"
strum_macros = "0.27"
