[package]
name = "suzu"
version = "0.1.0"
description = "An opensource lightweight analysis tool for various types of signal files"
authors = ["Arciemij Bokun <scientificrelsa@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28"
kofft = "0.1"
ratatui = "0.29"
color-eyre = "0.6"
thiserror = "2"
anyhow = "1"
strum = "0.27"
strum_macros = "0.27"
clap = {version = "4", features = ["derive"]}
rustfft = "6"
